Fixed an alignment issue

--- a/src/components/stylesheets/index.css
+++ b/src/components/stylesheets/index.css
@@ -34,6 +34,18 @@ body {
   padding-bottom: 5%;
 }
 
+#grades-block {
+  margin-top: 5%;
+  height: 100%;
+  max-width: 33%;
+  float: left;
+  display: inline-block;
+}
+
+#grades-block h3 {
+  padding-bottom: 5%;
+}
+
 #header {
   margin-bottom: 5%;
 }
@@ -71,13 +83,6 @@ body {
   float: left;
    /*background-color: #BDB76B; */
   border-right: 1px solid #999999;
-}
-#grades-block {
-  margin-top: 5%;
-  height: 100%;
-  max-width: 33%;
-  float: left;
-  display: inline-block;
 }
 
 #todo-block h3 {
